...

            <EditText
                android:id="@+id/main_edt_api"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <MaterialEditText
                android:id="@+id/main_edt_normal_with_hint_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <MaterialEditText
                android:id="@+id/main_edt_normal_with_input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <MaterialEditText
                android:id="@+id/main_edt_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <MaterialEditText
                android:id="@+id/main_edt_disabled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

                <MaterialEditText
                    android:id="@+id/main_edt_normal_with_hint_text_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <MaterialEditText
                    android:id="@+id/main_edt_normal_with_input_text_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <MaterialEditText
                android:id="@+id/main_edt_normal_with_hint_text_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <MaterialEditText
                android:id="@+id/main_edt_normal_with_input_text_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <MaterialEditText
                android:id="@+id/main_edt_disabled_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <MaterialEditText
                android:id="@+id/main_edt_normal_with_input_text_multi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <MaterialEditText
                android:id="@+id/main_edt_normal_with_input_text_label_multi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <MaterialEditText
                android:id="@+id/main_edt_character_counter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <MaterialEditText
                android:id="@+id/main_edt_character_counter_exceeding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <MaterialEditText
                android:id="@+id/main_edt_character_counter_multi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <MaterialEditText
                android:id="@+id/main_edt_character_counter_exceeding_multi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
